# fortuna-terminal

./: .gitignore  README.md  TODO.md  fortuna-protocol.h
fortuna-terminal/: CMakeLists.txt  Makefile  TODO.md  control.cc  control.hh  debug.cc  debug.hh  debugmode.cc  debugmode.hh  global.hh  main.c  main.cc  options.cc  options.hh  precompile.hh  test.txt  warnings.cfg
fortuna-terminal/application/: application.cc  application.hh  control.cc  control.hh  debug.cc  debug.hh  framecontrol.cc  framecontrol.hh  gpio.cc  gpio.hh  options.cc  options.hh  timingdebug.cc  timingdebug.hh  welcome.cc  welcome.hh
fortuna-terminal/buffer/: buffer.c  buffer.h
fortuna-terminal/comm/: comm.c  comm.cc  comm.h  comm.hh  comm_module.cc  comm_module.hh  communicationmodule.cc  communicationmodule.hh  debug.cc  debug.h  debug.hh  echo.cc  echo.h  echo.hh  echofortuna.cc  echofortuna.hh  fdcomm.cc  fdcomm.hh  pipes.cc  pipes.hh  pty.c  pty.cc  pty.h  pty.hh  tcpip.c  tcpip.cc  tcpip.h  tcpip.hh  uart.cc  uart.h  uart.hh  uart.txt
fortuna-terminal/common/: color.hh  geometry.hh  iterativethread.hh  noncopyable.hh  pixelsize.hh  syncqueue.hh
fortuna-terminal/env/: env.hh  environment.cc  environment.hh  runner.cc  runner.hh  threadrunner.cc  threadrunner.hh
fortuna-terminal/environment/: environment.cc  environment.hh
fortuna-terminal/error/: ERRORHANDLING.md  error.c  error.h
fortuna-terminal/event/: input_event.hh  inputevent.hh  output_event.hh  outputevent.hh
fortuna-terminal/exceptions/: fortunaexception.hh  sdlexception.hh
fortuna-terminal/old/: control.cc  control.hh  (+3 more)
(+410 files in other folders)
